# flock-vpn

./: Makefile  flatpak-manifest.yml  pyproject.toml
.github/workflows/: release.yml
docs/: security.md  ui.md  verify.md
src/: main.py
src/core/: system_info.py
src/ui/: main.slint
