[project]
name = "FlockVPN"
version = "0.0.1"
description = "A modern GUI application built with Slint and Python."
requires-python = ">=3.12"
dependencies = [
    "slint==1.16.1b1"
]

[tool.app-metadata]
company_name = "Loosebird"
app_id = "com.loosebird.flockvpn"

[dependency-groups]
dev = [
    "nuitka==4.0.8",
    "zstandard==0.25.0"
]
